# gpt-dev

./: README.md  pyproject.toml
src/gpt_dev/: main.py  openai_service.py
